--- a/App.config
+++ b/App.config
@@ -7,12 +7,13 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
-  <connectionStrings>
-  <add name="PolaroidEntities" connectionString="metadata=res://*/DataBase.BD.csdl|res://*/DataBase.BD.ssdl|res://*/DataBase.BD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-CCP78NP\SQLEXPRESS;initial catalog=Polaroid;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="PolaroidEntities" connectionString="metadata=res://*/DataBase.BD.csdl|res://*/DataBase.BD.ssdl|res://*/DataBase.BD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=V-MGOK-201-27N\SQLEXPRESS;initial catalog=Polaroid-2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
