--- a/Polaroid.csproj
+++ b/Polaroid.csproj
@@ -64,6 +64,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Pages\About Us\SUSPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\Admin Main\AdmMain.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -112,11 +116,17 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BD.edmx</DependentUpon>
     </Compile>
+    <Compile Include="DataBase\Categories.cs">
+      <DependentUpon>BD.tt</DependentUpon>
+    </Compile>
     <Compile Include="DataBase\Items.cs">
       <DependentUpon>BD.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Role.cs">
       <DependentUpon>BD.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\About Us\SUSPage.xaml.cs">
+      <DependentUpon>SUSPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\Admin Main\AdmMain.xaml.cs">
       <DependentUpon>AdmMain.xaml</DependentUpon>
