--- a/App.config
+++ b/App.config
@@ -14,6 +14,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="PolaroidEntities" connectionString="metadata=res://*/DataBase.BD.csdl|res://*/DataBase.BD.ssdl|res://*/DataBase.BD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=V-MGOK-201-27N\SQLEXPRESS;initial catalog=Polaroid-2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="PolaroidEntities" connectionString="metadata=res://*/DataBase.BD.csdl|res://*/DataBase.BD.ssdl|res://*/DataBase.BD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-CCP78NP\SQLEXPRESS;initial catalog=Polaroid;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
