--- a/App.config
+++ b/App.config
@@ -13,7 +13,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-	  <add name="PolaroidEntities" connectionString="metadata=res://*/DataBase.BD.csdl|res://*/DataBase.BD.ssdl|res://*/DataBase.BD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-CCP78NP\SQLEXPRESS;initial catalog=Polaroid;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-</configuration>
+<connectionStrings><add name="PolaroidEntities" connectionString="metadata=res://*/DataBase.BD.csdl|res://*/DataBase.BD.ssdl|res://*/DataBase.BD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-CCP78NP\SQLEXPRESS;initial catalog=Polaroid;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
