--- a/Polaroid.csproj
+++ b/Polaroid.csproj
@@ -154,9 +154,6 @@
     <Compile Include="DataBase\SignIn.cs">
       <DependentUpon>BD.tt</DependentUpon>
     </Compile>
-    <Compile Include="DataBase\sysdiagrams.cs">
-      <DependentUpon>BD.tt</DependentUpon>
-    </Compile>
     <Compile Include="Pages\About Us\SUSPage.xaml.cs">
       <DependentUpon>SUSPage.xaml</DependentUpon>
     </Compile>
@@ -234,9 +231,6 @@
     <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Pages\Register\Превью.jpg" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="DataBase\BD.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>BD.edmx</DependentUpon>
@@ -247,6 +241,10 @@
       <DependentUpon>BD.edmx</DependentUpon>
       <LastGenOutput>BD.cs</LastGenOutput>
     </Content>
+    <Resource Include="Pages\GlavPage\PocketPrinter.jpg" />
+    <Resource Include="Pages\GlavPage\PhotoPaper.jpg" />
+    <Resource Include="Pages\GlavPage\EchonCamera.jpg" />
+    <Resource Include="Pages\GlavPage\PhotoCamera.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
