Капец много изменений Патчноута не будет

--- a/Polaroid.csproj
+++ b/Polaroid.csproj
@@ -198,12 +198,19 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\Testovik\Testo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\TovarPage\ItemPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pages\Testovik\Testo.xaml.cs">
+      <DependentUpon>Testo.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\TovarPage\ItemPage.xaml.cs">
       <DependentUpon>ItemPage.xaml</DependentUpon>
     </Compile>
